Stage 2 (Java 25) increments 2-3: hidden classes, SecurityManager survival, modern-JVM launch flags
- ServiceDelegateGenerator: use MethodHandles.privateLookupIn +
  defineHiddenClass on Java 15+ (resolved reflectively; Java 8-14 keep
  Unsafe.defineAnonymousClass). Generated names are normalized into the
  lookup class's package as hidden classes require.
- FMLTweaker: setSecurityManager throwing UnsupportedOperationException
  (Java 17+ without allow flag; always on 24+ per JEP 486) no longer
  kills startup - log one line and continue; System.exit trapping is
  still covered by TerminalTransformer's bytecode rewrite.
- generateStartScripts: start.sh now detects the Java major version and
  appends --add-opens set on 9+ and --sun-misc-unsafe-memory-access=allow
  on 23+; start.cmd gets a MODERN_JAVA_FLAGS placeholder.
- CI: new experimental smoke-java25 job boots the built server-dist on
  Temurin 25 with the modern flags (continue-on-error while Stage 2 work
  is in progress) - the acceptance test for this stage.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013i11qXKChMW3pwGD4pkyhB